@@ -1002,7 +1002,7 @@ FORMS should produce the binary coding of element in VAR."
 Construct the binary coded DTD (bdtd) in the current buffer."
   (insert
    ";;; This file was created by psgml on " (current-time-string) "\n"
-   "(sgml-saved-dtd-version 6)\n")
+   "(sgml-saved-dtd-version 7)\n")
   (sgml-code-dtd dtd)
   (set 'file-type 1)
   (write-region (point-min) (point-max) file))
