@@ -1,3 +1,10 @@
+Mon Aug 31 21:53:45 1998  Lennart Staflin  <lenst@lysator.liu.se>
+
+	* psgml-parse.el (sgml-bdtd-load): Increase version number
+	(sgml-read-dtd): Increase version number
+
+	* psgml-dtd.el (sgml-write-dtd): Increase version number
+
 Sat Aug 15 18:58:25 1998  Lennart Staflin  <lenst@lysator.liu.se>
 
 	* psgml-edit.el (sgml-complete): add completion of #-reserved words
